# amazon-competitor-analysis

./: .env  Makefile  README.md  app.py  main.py  pyproject.toml  query_live_data.py  requirements.txt  test_api_workflow.py  test_indian_postcodes.py  test_integration.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  api.js  index.css
frontend/src/components/: CompetitorAnalysis.js  EnhancedLLMAnalysis.js  LLMAnalysis.js  ProductCard.js  ProductInputForm.js  WorkflowSteps.js
src/: competitor_service.py  db.py  geo_utils.py  llm_service.py  models.py  oxylabs_service.py  product_service.py
tests/: README.md  add_sample_data.py  run_tests.py  test_all_methods_legacy.py  test_connection.py  test_db_legacy.py  test_delete.py  test_insert.py  test_retrieve.py  test_search.py  test_update.py
