[project]
name = "amazonproject"
version = "0.1.0"
description = "Amazon Product Competitor Analysis API with Oxylabs Web Scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-core>=0.1.0",
]
